# Neural-Network-Training-With-Multigrid

./: .gitignore  CMakeLists.txt  README.md
include/: typedefs.h
include/mgrit/: mgrit_helper.h  mgrit_solver.h  move_grids.h  relax.h
include/neural_network/: neural_network.h
src/: CMakeLists.txt  four_layer_problem.cpp  three_layer_problem.cpp
src/mgrit/: mgrit_helper.cpp  mgrit_solver.cpp  move_grids.cpp  relax.cpp
src/neural_network/: neural_network.cpp
tests/: CMakeLists.txt  main.cpp  test_helper.h
tests/mgrit/: mgrit_helper_test.cpp  mgrit_solver_test.cpp  move_grids_test.cpp  relax_test.cpp
tests/neural_network/: neural_network_test.cpp
